--- a/PushUtransRoadsSGID/Properties/Resources.resx
+++ b/PushUtransRoadsSGID/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="TableFields16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TableFields16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TmCompareSelectedFeatures16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TmCompareSelectedFeatures16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
